--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "alchemy-sdk": "^2.3.0",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
